src/objects/Resource_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resource_Request__c</fullName>
        <label>Resource Request</label>
        <referenceTo>ResourceRequest__c</referenceTo>
        <relationshipLabel>Resource Assignments</relationshipLabel>
        <relationshipName>Resource_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Resource_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Resource Role</label>
        <referenceTo>Resource_Role__c</referenceTo>
        <relationshipLabel>Resource Assignments</relationshipLabel>
        <relationshipName>Resource_Assignments</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Filled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resource_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Resource Assignment</label>
    <nameField>
        <label>Resource Assignment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Resource Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>